Update get user profile endpoint
